--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,37 @@ h1 {
     font-weight: 700;
     line-height: 1.1
 }
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.2
+}
+
+.search-button {
+    color: #fff;
+    text-align: center;
+    letter-spacing: .2px;
+    background-color: #285e50;
+    border: 1px #347866;
+    border-radius: 10px;
+    padding: .75rem 2rem;
+    font-family: Lato,sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 150%;
+    text-decoration: none;
+    transition: background-color .2s
+}
+
+.search-button:hover {
+    background-color: var(--primary--default);
+    color: var(--neutral--white)
+}
+
+.search-button.mobile {
+    min-width: 170px;
+    font-weight: 700
+}
